@@ -96,10 +96,11 @@ def getCopyGroups(obj):
 @indexer(IMeetingItem)
 def reviewProcessInfo(obj):
     """
-      Compute a reviewProcessInfo, this concatenate the proposingGroup
+      Compute a reviewProcessInfo, this concatenate the group managing item
       and the item review_state so it can be queryable in the catalog.
     """
-    return '%s__reviewprocess__%s' % (obj.getProposingGroup(), obj.queryState())
+    return '%s__reviewprocess__%s' % (
+        obj.adapted()._getGroupManagingItem().getId(), obj.queryState())
 
 
 @indexer(IMeetingItem)
