@@ -12,6 +12,11 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 
 - Simplified SearchableText indexer by use of utils.get_annexes as annexes title is indexed
 - Added 'Labels' on items, this rely on the integration of ftw.labels
+- Added method MeetingItem._getGroupManagingItem that returns the group currently managing the item.
+  This makes it possible to specify that another group than proposingGroup is managing the item.
+  This can returns proposingGroup for some steps of the WF and another group for specific steps for example
+- Use 'reviewProcessInfo' index instead getProposingGroup/review_state to search for items to validate in
+  BaseItemsToValidateOfHighestHierarchicLevelAdapter
 
 4.1b3 (2018-01-23)
 ------------------
